<resources>
    <string name="app_name">ecommerce-frontend</string>
    <string name="splash_screen">splash screen\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_1"> tab 1</string>
    <string name="tab_2"> tab 2</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="lewati">Lewati</string>
    <string name="gabung_sekarang">Gabung Sekarang</string>
    <string name="notification">notification</string>
    <string name="shopping_cart">shopping cart</string>
    <string name="account">account</string>
    <string name="menu">menu</string>
    <string name="wishlist">wishlist</string>
    <string name="transaction">transaction</string>
    <string name="logout">Logout</string>
    <string name="en">EN</string>
    <string name="id">ID</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="atau_daftar_dengan">atau daftar dengan</string>
    <string name="daftar">Daftar</string>
    <string name="textfield_email">Email</string>
    <string name="textfield_password">Password</string>
    <string name="tombol_daftar">Daftar</string>
    <string name="atau_masuk_dengan">atau masuk dengan</string>
    <string name="tombol_masuk">Masuk</string>
    <string name="SnK">Dengan masuk disini, kamu menyetujui Syarat &amp; Ketentuan\n serta Kebijakan Privasi TokoPhincon></string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="bottom_wishlist">Wishlist</string>
    <string name="bottom_transaction">Transaction</string>
    <string name="error_view">error</string>
    <string name="retry">Retry</string>
    <string name="email_tidak_valid">Email Tidak Valid</string>
    <string name="password_tidak_valid">Password Tidak Valid</string>
    <string name="appbar_masuk">Masuk</string>
    <string name="appbar_daftar">Daftar</string>
    <string name="helper_text_email">Contoh: test@gmail.com</string>
    <string name="helper_text_password">Minimal 8 karakter</string>
    <string name="john_doe">John doe</string>
    <string name="selesai">Selesai</string>
    <string name="image_onboarding_2">Image Onboarding 2</string>
    <string name="image_onboarding_3">Image Onboarding 3</string>
    <string name="icon_account">icon account</string>
    <string name="icon_bintang">icon bintang</string>
    <string name="kamera">Kamera</string>
    <string name="galeri">Galeri</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="gambar_disimpan_ke_galeri">Gambar disimpan ke galeri</string>
    <string name="gambar_disimpan">Gambar disimpan %1$s</string>
    <string name="gambar_gagal_disimpan">Gambar gagal disimpan</string>
    <string name="imagesaver">ImageSaver</string>

</resources>