<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.home.HomeFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ic_lottie"
        android:layout_width="206dp"
        android:layout_height="182dp"
        android:layout_marginTop="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/home_animation"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_lottie" />
    <LinearLayout
        android:id="@+id/ll_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginVertical="24dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/en"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginStart="5dp"
        android:textAlignment="center"
        android:textColor="?attr/colorControlNormal"
        android:layout_gravity="center"/>
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/sw_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="14sp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="?attr/colorControlNormal"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_darkmode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginVertical="24dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginStart="5dp"
        android:textAlignment="center"
        android:textColor="?attr/colorControlNormal"
        android:layout_gravity="center"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/sw_darkmode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark"
            android:textSize="14sp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="?attr/colorControlNormal"
            android:layout_gravity="center"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>