<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layoutDescription="@xml/fragment_onboarding_scene"
    tools:context=".OnboardingFragment">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView8"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="100dp"
        android:src="@drawable/intro_default"
        app:altSrc="@drawable/intro_selected"
        app:layout_constraintBottom_toBottomOf="@+id/btnLewati"
        app:layout_constraintEnd_toStartOf="@+id/btnSelanjutnya"
        app:layout_constraintStart_toEndOf="@+id/btnLewati"
        app:layout_constraintTop_toTopOf="@+id/btnLewati" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/onboarding1"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="75dp"
        android:layout_marginRight="24dp"
        android:text="@string/gabung_sekarang"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/btnLewati"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:text="@string/lewati"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/btnSelanjutnya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/selanjutnya"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView7"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/intro_default"
        app:altSrc="@drawable/intro_selected"
        app:layout_constraintBottom_toBottomOf="@+id/btnLewati"
        app:layout_constraintStart_toEndOf="@+id/imageFilterView8"
        app:layout_constraintTop_toTopOf="@+id/btnLewati" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView9"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/intro_default"
        app:altSrc="@drawable/intro_selected"
        app:layout_constraintBottom_toBottomOf="@+id/btnLewati"
        app:layout_constraintStart_toEndOf="@+id/imageFilterView7"
        app:layout_constraintTop_toTopOf="@+id/btnLewati"
        app:layout_constraintVertical_bias="0.555" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/onboarding2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="222dp"
        android:contentDescription="@string/image_onboarding_2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="384dp"
        android:src="@drawable/onboarding3"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="24dp"
        android:contentDescription="@string/image_onboarding_3" />


</androidx.constraintlayout.motion.widget.MotionLayout>